--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.3.1
   path_provider: ^2.1.1
   flutter_cache_manager: ^3.3.1
+  flutter_wallpaper_manager: ^0.0.4
 
 dev_dependencies:
   flutter_test:
