--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   path_provider: ^2.1.1
   flutter_cache_manager: ^3.3.1
   flutter_wallpaper_manager: ^0.0.4
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.4
+  firebase_core: ^2.25.4
+  cloudinary_flutter: ^1.3.0
+  cloudinary_public: ^0.23.1
 
 dev_dependencies:
   flutter_test:
