--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   firebase_core: ^2.25.4
   cloudinary_flutter: ^1.3.0
   cloudinary_public: ^0.23.1
+  google_fonts: ^6.1.0
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
