--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,8 @@ dependencies:
   dynamic_color: ^1.6.8
   google_nav_bar: ^5.0.6
   fluttertoast: ^8.2.4
-  shared_preferences: ^2.2.2
   dotted_border: ^2.1.0
   file_picker: ^6.1.1
-  floor: ^1.4.2
-  retrofit: ^4.0.3
-  dio: ^5.4.0
-  http: ^1.1.2
-  retrofit_generator: ^8.0.6
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
   equatable: ^2.0.5
@@ -60,13 +54,11 @@ dependencies:
   cloudinary_public: ^0.23.1
   google_fonts: ^6.1.0
   image_cropper: ^5.0.1
+  flutter_floating_bottom_bar: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  floor_generator: ^1.4.2
-  build_runner: ^2.1.2
-  sqflite: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
