--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   google_fonts: ^6.1.0
   image_cropper: ^5.0.1
   flutter_floating_bottom_bar: ^1.2.0
+  blurhash_ffi: ^1.2.4
+  flutter_blurhash: ^0.8.2
 
 dev_dependencies:
   flutter_test:
