--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ dependencies:
   flutter_floating_bottom_bar: ^1.2.0
   blurhash_ffi: ^1.2.4
   flutter_blurhash: ^0.8.2
+  hive: ^2.2.3
+  supabase_flutter: ^2.3.4
+  shimmer: ^3.0.0
+  hive_generator: ^2.0.1
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +75,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.13.1"
   carousel_slider: ^4.0.0-nullsafety.0
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
