--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,12 @@ android {
     compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
+    defaultConfig {
+        multiDexEnabled true
+    }
+
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -64,4 +69,8 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+      coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+      implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
+}
